@@ -6,7 +6,7 @@ use MozRepl::RemoteObject;
 use URI;
 use Cwd;
 use File::Basename;
-use WWW::Mechanize::Link;
+use MIME::Base64;
 use Scalar::Util qw'blessed weaken';
 use Carp qw(carp croak);
 
@@ -321,5 +321,21 @@ sub autoclose_tab {
     $tab->__release_action($release);
 };
 
+=head2 C<< $ff->set_tab_content $tab, $html [,$repl] >>
+
+This is a more general method that allows you to replace
+the HTML of an arbitrary tab, and not only the tab that
+WWW::Mechanize::Firefox is associated with.
+
+=cut
+
+sub set_tab_content {
+    my ($self, $tab, $content, $repl) = @_;
+    $tab ||= $self->tab;
+    $repl ||= $self->repl;
+    my $data = encode_base64($content,'');
+    my $url = qq{data:text/html;base64,$data};
+    $tab->{linkedBrowser}->loadURI($url);
+};
 
 1;
